--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2818,13 +2818,15 @@
 			}
 
 		ul.contact {
+			display: flex;
+			flex-direction: row;
 			list-style: none;
 			padding: 0;
 		}
 
 			ul.contact > li {
-				padding: 0;
-				margin: 1.5em 0 0 0;
+				padding: 0 1em;
+				margin: 0;
 			}
 
 				ul.contact > li:first-child {
