--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3885,12 +3885,7 @@
 /* Intro */
 
 	#intro {
-		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/group.jpg");
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/group.jpg");
-    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/group.jpg");
-    background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/group.jpg");
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.1))), url("images/group.jpg");
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/group.jpg");
+    background-image: url("images/intro.svg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
@@ -3933,4 +3928,13 @@
 				background-attachment: scroll;
 			}
 
+		}
+
+
+		.camp-picture {
+			height: 500px;
+	    background-image: url("images/group.jpg");
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-size: 100% 100%;
 		}
