--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3295,7 +3295,7 @@
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
 			justify-content: center;
-			min-height: 100vh;
+			min-height: 70vh;
 		}
 
 			body.is-ie .wrapper.fullscreen {
@@ -3305,11 +3305,11 @@
 			@media screen and (max-width: 1280px) {
 
 				.wrapper.fullscreen {
-					min-height: calc(100vh - 2.5em);
+					min-height: calc(70vh - 2.5em);
 				}
 
 					body.is-ie .wrapper.fullscreen {
-						height: calc(100vh - 2.5em);
+						height: calc(70vh - 2.5em);
 					}
 
 			}
@@ -3889,13 +3889,17 @@
 /* Intro */
 
 	#intro {
-    background-image: url("images/intro.svg");
+    background-image: url("images/logo_white.png");
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size: 100% 100%;
+		background-size: contain;
 	}
 
-		#intro div {
+		#intro-text div {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-top: auto;
 			padding-top: 1em;
 			padding-bottom: 1em;
 			background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
