--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2046,6 +2046,7 @@
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
+		display: -ms-flexbox;
 		display: flex;
 		-moz-flex-wrap: wrap;
 		-webkit-flex-wrap: wrap;
